--- a/mcm/Config/LamasTinyHUD/config.json
+++ b/mcm/Config/LamasTinyHUD/config.json
@@ -1106,7 +1106,18 @@
                     "valueOptions": {
                         "sourceType": "ModSettingBool"
                     }
+                },
+              {
+                "id": "bUnEquipAmmo:MiscSetting",
+                "text": "$LamasTinyHUD_UnEquipAmmo_OptionText",
+                "type": "toggle",
+                "help": "$LamasTinyHUD_UnEquipAmmo_InfoText",
+                "groupCondition": 5,
+                "groupBehavior": "disable",
+                "valueOptions": {
+                  "sourceType": "ModSettingBool"
                 }
+              }
             ]
         }
     ]
