--- a/mcm/Config/LamasTinyHUD/config.json
+++ b/mcm/Config/LamasTinyHUD/config.json
@@ -181,6 +181,17 @@
                     }
                 },
                 {
+                    "id": "uPositionSelect:Page",
+                    "text": "$LamasTinyHUD_PositionSelect_OptionText",
+                    "type": "enum",
+                    "help": "$LamasTinyHUD_PositionSelect_InfoText",
+                    "valueOptions": {
+                        "options": ["$LamasTinyHUD_Controls_Config_Top", "$LamasTinyHUD_Controls_Config_Right", "$LamasTinyHUD_Controls_Config_Bottom", "$LamasTinyHUD_Controls_Config_Left", "$LamasTinyHUD_Controls_Config_All"],
+                        "sourceType": "ModSettingInt",
+                        "defaultValue": 0
+                    }
+                },
+                {
                     "id": "uPageList:Page",
                     "text": "$LamasTinyHUD_PageList",
                     "type": "enum",
@@ -299,6 +310,9 @@
                         "type": "CallFunction",
                         "function": "ResetSlot"
                     }
+                },
+                {
+                    "type": "empty"
                 },
                 {
                     "type": "empty"
