[feature] up version
* adjusted: setting to show the UI now after PostLoad
* added: font config (not in the MCM) for ttf and otf files, should  support load of chinese, chinese_simplified, cyrillic, japanese,  korean, thai, vietnamiese (the provided font does not suppor that)
* adjusted: default config due new font needs different offsets

--- a/LamasTinyHUD.ini
+++ b/LamasTinyHUD.ini
@@ -5,3 +5,14 @@ iLogLevel = 2
 
 [Image]
 bDrawKeyBackground = 0
+
+[Font]
+sName = NotoSans-Regular.ttf
+fSize = 20
+bChineseFull = 0
+bChineseSimplifiedCommon = 0
+bCyrillic = 0
+bJapanese = 0
+bKorean = 0
+bThai = 0
+bVietnamese = 0
