--- a/LamasTinyHUD.ini
+++ b/LamasTinyHUD.ini
@@ -7,7 +7,7 @@ iLogLevel = 2
 bDrawKeyBackground = 0
 
 [Font]
-sName = NotoSans-Regular.ttf
+sName = DrukaatieBurti-Regular.ttf
 fSize = 20
 bChineseFull = 0
 bChineseSimplifiedCommon = 0
