--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -86,3 +86,7 @@ uMaxAmmunitionType = 3
 bCheckDuplicateItems = 1
 bUnEquipAmmo = 0
 bOnlyFavoriteAmmo = 0
+sActiveSetting =
+uSettingList = 0
+sSettingName = 
+sCreateSetting =
