--- a/mcm/Config/LamasTinyHUD/config.json
+++ b/mcm/Config/LamasTinyHUD/config.json
@@ -1160,6 +1160,64 @@
                     "valueOptions": {
                         "sourceType": "ModSettingBool"
                     }
+                },
+                {
+                    "text": "$LamasTinyHUD_MiscSetting_HeaderText_Settings",
+                    "type": "header",
+                    "position": 1
+                },
+                {
+                    "id": "sActiveSetting:MiscSetting",
+                    "type": "text",
+                    "text": "$LamasTinyHUD_ActiveSetting_OptionText",
+                    "help": "$LamasTinyHUD_ActiveSetting_InfoText",
+                    "groupCondition": 1,
+                    "groupBehavior": "disable",
+                    "valueOptions": {
+                        "value": "",
+                        "sourceType": "ModSettingString"
+                    }
+                },
+                {
+                    "id": "uSettingList:MiscSetting",
+                    "text": "$LamasTinyHUD_SettingList_OptionText",
+                    "type": "enum",
+                    "help": "$LamasTinyHUD_SettingList_InfoText",
+                    "valueOptions": {
+                        "options": [
+                            "$LamasTinyHUD_ENUM"
+                        ],
+                        "sourceType": "ModSettingInt",
+                        "defaultValue": 0
+                    }
+                },
+                {
+                    "text": "$LamasTinyHUD_MiscSetting_HeaderText_Create_New_Setting",
+                    "type": "header"
+                },
+                {
+                    "id": "sSettingName:MiscSetting",
+                    "type": "input",
+                    "text": "$LamasTinyHUD_SettingName_OptionText",
+                    "help": "$LamasTinyHUD_SettingName_InfoText",
+                    "valueOptions": {
+                        "value": "",
+                        "sourceType": "ModSettingString"
+                    }
+                },
+                {
+                    "id": "sCreateSetting:MiscSetting",
+                    "type": "text",
+                    "text": "$LamasTinyHUD_CreateSetting_OptionText",
+                    "help": "$LamasTinyHUD_CreateSetting_InfoText",
+                    "valueOptions": {
+                        "value": "",
+                        "sourceType": "ModSettingString"
+                    },
+                    "action": {
+                        "type": "CallFunction",
+                        "function": "CreateConfig"
+                    }
                 }
             ]
         }
