--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -26,6 +26,7 @@ uSlotActionLeft = 0
 sFormNameLeft = 
 sSelectedItemFormLeft =
 sResetSlot = 
+sAddUnarmed =
 
 [HudSetting]
 sDisplayResolutionWidth =
