--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -10,6 +10,8 @@ bDrawToggleButton = 1
 uConfigPosition = 0
 sTriggerConfig = 
 fMasterScale = 1
+sExecuteKeyTop = 
+sExecuteKeyBottom = 
 
 [Page]
 uPositionSelect = 4
