--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -37,7 +37,8 @@ fHudImageScaleWidth = 0.23
 fHudImageScaleHeight = 0.23
 fHudImagePositionWidth = 200
 fHudImagePositionHeight = 775
-fHudSlotPositionOffset = 105
+fHudSlotPositionOffsetX = 105
+fHudSlotPositionOffsetY = 105
 fHudKeyPositionOffset = 38
 fKeyIconScaleWidth = 0.38
 fKeyIconScaleHeight = 0.38
