--- a/LamasTinyHUD.ini
+++ b/LamasTinyHUD.ini
@@ -18,5 +18,5 @@ bThai = 0
 bVietnamese = 0
 
 [Config]
-sDefault = 
-sElden =
+sDefault = LamasTinyHUD_Custom.ini
+sElden = LamasTinyHUD_Custom_Elden.ini
