--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -13,6 +13,7 @@ fMasterScale = 1
 sExecuteKeyTop = 
 sExecuteKeyBottom = 
 uShowHideKey = 26
+bBottomExecuteKeyComboOnly = 0
 
 [Page]
 uPositionSelect = 4
