--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -97,3 +97,6 @@ uSettingList = 0
 sSettingName = 
 sCreateSetting =
 bPreventConsumptionOfLastDynamicPotion = 1
+bGroupPotions = 0
+fPotionMinPerfect = 0.7
+fPotionMaxPerfect = 1.2
