--- a/mcm/Config/LamasTinyHUD/config.json
+++ b/mcm/Config/LamasTinyHUD/config.json
@@ -1137,21 +1137,11 @@
                     }
                 },
                 {
-                    "id": "bActionCheck:MiscSetting",
-                    "text": "$LamasTinyHUD_MiscSetting_OptionText",
-                    "type": "toggle",
-                    "help": "$LamasTinyHUD_MiscSetting_InfoText",
+                    "type": "hiddenToggle",
+                    "groupControl": 7,
                     "valueOptions": {
-                        "sourceType": "ModSettingBool"
-                    }
-                },
-                {
-                    "id": "bEmptyHandSetting:MiscSetting",
-                    "text": "$LamasTinyHUD_EmptyHandSetting_OptionText",
-                    "type": "toggle",
-                    "help": "$LamasTinyHUD_EmptyHandSetting_InfoText",
-                    "valueOptions": {
-                        "sourceType": "ModSettingBool"
+                        "sourceType": "PropertyValueBool",
+                        "propertyName": "bGroupPotions"
                     }
                 },
                 {
@@ -1176,15 +1166,6 @@
                         "step": 1,
                         "formatString": "{0}",
                         "sourceType": "ModSettingFloat"
-                    }
-                },
-                {
-                    "id": "bDisableInputQuickLoot:MiscSetting",
-                    "text": "$LamasTinyHUD_DisableInputQuickLoot_OptionText",
-                    "type": "toggle",
-                    "help": "$LamasTinyHUD_DisableInputQuickLoot_InfoText",
-                    "valueOptions": {
-                        "sourceType": "ModSettingBool"
                     }
                 },
                 {
@@ -1267,6 +1248,46 @@
                     }
                 },
                 {
+                    "id": "bGroupPotions:MiscSetting",
+                    "text": "$LamasTinyHUD_GroupPotions_OptionText",
+                    "type": "toggle",
+                    "help": "$LamasTinyHUD_GroupPotions_InfoText",
+                    "valueOptions": {
+                        "sourceType": "ModSettingBool"
+                    }
+                },
+                {
+                    "id": "fPotionMinPerfect:MiscSetting",
+                    "text": "$LamasTinyHUD_MiscSetting_PotionMinPerfect_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_MiscSetting_PotionMinPerfect_InfoText",
+                    "groupCondition": 7,
+                    "groupBehavior": "disable",
+                    "valueOptions": {
+                        "min": 0.1,
+                        "max": 2.0,
+                        "step": 0.1,
+                        "formatString": "{1}",
+                        "sourceType": "ModSettingFloat"
+                    }
+                },
+                {
+                    "id": "fPotionMaxPerfect:MiscSetting",
+                    "text": "$LamasTinyHUD_MiscSetting_PotionMaxPerfect_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_MiscSetting_PotionMaxPerfect_InfoText",
+                    "groupCondition": 7,
+                    "groupBehavior": "disable",
+                    "valueOptions": {
+                        "min": 0.1,
+                        "max": 2.0,
+                        "step": 0.1,
+                        "formatString": "{1}",
+                        "sourceType": "ModSettingFloat"
+                    }
+                },
+
+                {
                     "text": "$LamasTinyHUD_MiscSetting_HeaderText_Settings",
                     "type": "header",
                     "position": 1
@@ -1322,6 +1343,37 @@
                     "action": {
                         "type": "CallFunction",
                         "function": "CreateConfig"
+                    }
+                },
+                {
+                    "text": "$LamasTinyHUD_MiscSetting_HeaderText_Misc_Check",
+                    "type": "header"
+                },
+                {
+                    "id": "bActionCheck:MiscSetting",
+                    "text": "$LamasTinyHUD_MiscSetting_OptionText",
+                    "type": "toggle",
+                    "help": "$LamasTinyHUD_MiscSetting_InfoText",
+                    "valueOptions": {
+                        "sourceType": "ModSettingBool"
+                    }
+                },
+                {
+                    "id": "bEmptyHandSetting:MiscSetting",
+                    "text": "$LamasTinyHUD_EmptyHandSetting_OptionText",
+                    "type": "toggle",
+                    "help": "$LamasTinyHUD_EmptyHandSetting_InfoText",
+                    "valueOptions": {
+                        "sourceType": "ModSettingBool"
+                    }
+                },
+                {
+                    "id": "bDisableInputQuickLoot:MiscSetting",
+                    "text": "$LamasTinyHUD_DisableInputQuickLoot_OptionText",
+                    "type": "toggle",
+                    "help": "$LamasTinyHUD_DisableInputQuickLoot_InfoText",
+                    "valueOptions": {
+                        "sourceType": "ModSettingBool"
                     }
                 }
             ]
