--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -51,8 +51,10 @@ fToggleKeyOffsetX = 115
 fToggleKeyOffsetY = 115
 fCurrentItemsOffsetX = -15
 fCurrentItemsOffsetY = 200
-fSlotItemNameOffsetX = -15
-fSlotItemNameOffsetY = 65
+fSlotItemNameOffsetHorizontalX = -15
+fSlotItemNameOffsetHorizontalY = 65
+fSlotItemNameOffsetVerticalX = 45
+fSlotItemNameOffsetVerticalY = 75
 fArrowSlotOffsetX = -115
 fArrowSlotOffsetY = 115
 fHudArrowImageScaleWidth = 0.13
@@ -80,6 +82,7 @@ fCurrentItemsFontSize = 20
 uSlotButtonFeedback = 175
 bDrawCurrentItemsText = 1
 fArrowCountFontSize = 20
+bDrawItemNameText = 1
 
 [MiscSetting]
 bActionCheck = 0
