--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -1,12 +1,20 @@
 {
-    "registries": [{
-        "kind": "git",
-        "repository": "https://gitlab.com/colorglass/vcpkg-colorglass",
-        "baseline": "ef8d43afe4d26e842de3d034bff1081cb7990f07",
-        "packages": ["articuno",
-            "commonlibsse-ng",
-            "script-extender-common",
-            "skse"
-        ]
-    }]
+  "default-registry": {
+    "kind": "git",
+    "repository": "https://github.com/microsoft/vcpkg.git",
+    "baseline": "93895b28ea7bc8cda10f156c5d336f3fc070f8b1"
+  },
+  "registries": [
+    {
+      "kind": "git",
+      "repository": "https://gitlab.com/colorglass/vcpkg-colorglass",
+      "baseline": "ef8d43afe4d26e842de3d034bff1081cb7990f07",
+      "packages": [
+        "articuno",
+        "commonlibsse-ng",
+        "script-extender-common",
+        "skse"
+      ]
+    }
+  ]
 }
