--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -10,10 +10,7 @@
       "repository": "https://gitlab.com/colorglass/vcpkg-colorglass",
       "baseline": "ef8d43afe4d26e842de3d034bff1081cb7990f07",
       "packages": [
-        "articuno",
-        "commonlibsse-ng",
-        "script-extender-common",
-        "skse"
+        "commonlibsse-ng"
       ]
     }
   ]
