--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -104,3 +104,4 @@ bPreventConsumptionOfLastDynamicPotion = 1
 bGroupPotions = 0
 fPotionMinPerfect = 0.7
 fPotionMaxPerfect = 1.2
+bDisableReEquipOfActives = 0
